// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switches component should be defined and renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="form-group form-group--switch"
  >
    <div
      class="switch switch--label--right"
    >
      <div
        class="switch__text"
      >
        Switch text
      </div>
      <div
        class="switch__item"
      >
        <input
          id="1"
          readonly=""
          type="checkbox"
          value=""
        />
        <label
          for="1"
        >
          <span
            aria-hidden="true"
            class="switch__state"
          />
        </label>
      </div>
    </div>
    <div
      class="switch switch--label--right"
    >
      <div
        class="switch__text"
      >
        Switch text
      </div>
      <div
        class="switch__item"
      >
        <input
          id="2"
          readonly=""
          type="checkbox"
          value=""
        />
        <label
          for="2"
        >
          <span
            aria-hidden="true"
            class="switch__state"
          />
        </label>
      </div>
    </div>
    <div
      class="switch switch--label--right"
    >
      <div
        class="switch__text"
      >
        Disabled
      </div>
      <div
        class="switch__item"
      >
        <input
          disabled=""
          id="switch-2"
          readonly=""
          type="checkbox"
          value=""
        />
        <label
          for="switch-2"
        >
          <span
            aria-hidden="true"
            class="switch__state"
          />
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switches vertical orientation applies vertical class and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="switch switch--label--right switch--vertical"
  >
    <div
      class="switch__text"
    >
      Switch text
    </div>
    <div
      class="switch__item"
    >
      <input
        id="switch-0"
        readonly=""
        required=""
        type="checkbox"
        value=""
      />
      <label
        for="switch-0"
      >
        <span
          aria-hidden="true"
          class="switch__state"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;
